--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdk 31
-
+    buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "ar.edu.itba.mygymapp"
         minSdk 26
@@ -39,4 +39,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
 }
