--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity
             android:name=".home"
             android:exported="true" />
+        <activity android:name=".register" android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
