--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,10 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGymApp">
+        <activity android:name=".ui.register.register" android:exported="true" />
+        <activity android:name=".MainActivity" android:exported="true" />
         <activity
-            android:name=".home"
-            android:exported="true" />
-        <activity android:name=".register" android:exported="true" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
