--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.MyGymApp">
         <activity android:name=".ui.register.register" android:exported="true" />
         <activity android:name=".MainActivity" android:exported="true" />
+        <activity android:name=".ui.routines.RoutineActivity" android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
