--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".ui.routines.RoutineActivity" android:exported="true" />
         <activity android:name=".ui.scheduler.SchedulerActivity" android:exported="true" />
         <activity android:name=".ui.routines.execution.RoutineExecutionActivity" android:exported="true" />
+        <activity android:name=".ui.routines.execution.RoutineExecutionActivityAlt" android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
