--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,14 @@ android {
 
 
 dependencies {
+    def retrofit_version = "2.9.0"
 
+    def ok_http_version = "4.9.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
