--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.github.jaeryo2357:circleTimer:1.1.3'
+
+    implementation 'com.github.hannesa2:FloatingActionButton:2.4.0'
 }
