--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +19,24 @@
         <activity android:name=".ui.register.register" android:exported="true" />
         <activity android:name=".ui.register.ConfirmationActivity" android:exported="true" />
         <activity android:name=".MainActivity" android:exported="true" />
-        <activity android:name=".ui.routines.RoutineActivity" android:exported="true" />
+        <activity
+            android:name=".ui.routines.RoutineActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="mygym.com"
+                    android:pathPrefix="/routine"
+                    android:scheme="http" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.scheduler.SchedulerActivity" android:exported="true" />
         <activity android:name=".ui.routines.execution.RoutineExecutionActivity" android:exported="true" />
         <activity android:name=".ui.routines.execution.RoutineExecutionActivityAlt" android:exported="true" />
