--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".ui.scheduler.NotifyHandlerReceiver"
+            android:enabled="true" />
     </application>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
