--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'ca.antonious:materialdaypicker:0.7.4'
 
     implementation 'com.github.jaeryo2357:circleTimer:1.1.3'
 
