--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'ca.antonious:materialdaypicker:0.7.4'
-
+    implementation 'com.github.kenglxn.QRGen:android:2.6.0'
     implementation 'com.github.jaeryo2357:circleTimer:1.1.3'
 
     implementation 'com.github.hannesa2:FloatingActionButton:2.4.0'
