--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
 }
 
 android {
@@ -57,6 +58,7 @@ dependencies {
     implementation 'ca.antonious:materialdaypicker:0.7.4'
     implementation 'com.github.kenglxn.QRGen:android:2.6.0'
     implementation 'com.github.jaeryo2357:circleTimer:1.1.3'
-
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.github.hannesa2:FloatingActionButton:2.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
