--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ar.edu.itba.mygymapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -51,6 +52,7 @@
         </activity>
         <activity android:name=".ui.routines.QrActivity"
             android:exported="true"/>
+        <activity android:name=".QrScannerActivity" android:exported="true"/>
 
         <receiver
             android:name=".ui.scheduler.NotifyHandlerReceiver"
