--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGymApp">
-        <activity android:name=".ui.register.register" android:exported="true" />
-        <activity android:name=".ui.register.ConfirmationActivity" android:exported="true" />
+        <activity android:name=".ui.register.register" android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.register.ConfirmationActivity" android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity android:name=".MainActivity" android:exported="true" />
         <activity
             android:name=".ui.routines.RoutineActivity"
@@ -38,12 +40,16 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.scheduler.SchedulerActivity" android:exported="true" />
-        <activity android:name=".ui.routines.execution.RoutineExecutionActivity" android:exported="true" />
-        <activity android:name=".ui.routines.execution.RoutineExecutionActivityAlt" android:exported="true" />
+        <activity android:name=".ui.scheduler.SchedulerActivity" android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.routines.execution.RoutineExecutionActivity" android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.routines.execution.RoutineExecutionActivityAlt" android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -51,7 +57,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.routines.QrActivity"
-            android:exported="true"/>
+            android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity android:name=".QrScannerActivity" android:exported="true"/>
 
         <receiver
